// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z/OS node accessor Parser can list file of USS 1`] = `
[
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 2,
    "group": "GRP2611",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "linkTo": "$SYSNAME/",
    "name": "$SYSNAME",
    "owner": "CLASGEN",
    "permissions": "lrwxrwxrwx",
    "rawString": "lrwxrwxrwx     1 CLASGEN  GRP2611        9 Jul 13 19:13 $SYSNAME -> $SYSNAME/",
    "size": 9,
  },
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 2,
    "group": "GRP2611",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "linkTo": "$VERSION/",
    "name": "$VERSION",
    "owner": "CLASGEN",
    "permissions": "lrwxrwxrwx",
    "rawString": "lrwxrwxrwx     1 CLASGEN  GRP2611        9 Jul 13 19:13 $VERSION -> $VERSION/",
    "size": 9,
  },
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 0,
    "group": "DEFLT1",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "name": "CEC3",
    "owner": "CLASGEN",
    "permissions": "drwxr-xr-x",
    "rawString": "drwxr-xr-x    10 CLASGEN  DEFLT1      8192 Jul 13 18:52 CEC3",
    "size": 8192,
  },
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 1,
    "group": "GRP2611",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "name": "DetailMerge",
    "owner": "CLASGEN",
    "permissions": "-rwx------",
    "rawString": "-rwx------     1 CLASGEN  GRP2611     1749 Aug 25  2004 DetailMerge",
    "size": 1749,
  },
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 2,
    "group": "DEFLT1",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "linkTo": "man",
    "name": "zzz",
    "owner": "LIANGQI",
    "permissions": "lrwxrwxrwx",
    "rawString": "lrwxrwxrwx     1 LIANGQI  DEFLT1         3 Oct 25 20:35 zzz -> man",
    "size": 3,
  },
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 2,
    "group": "DEFLT1",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "linkTo": "/",
    "name": "zzz2",
    "owner": "LIANGQI",
    "permissions": "lrwxrwxrwx",
    "rawString": "lrwxrwxrwx     1 LIANGQI  DEFLT1         1 Nov  7 20:35 zzz2 -> /",
    "size": 1,
  },
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 0,
    "group": "DEFLT1",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "name": "zzz3",
    "owner": "LIANGQI",
    "permissions": "drwx------",
    "rawString": "drwx------     2 LIANGQI  DEFLT1      8192 Nov  7 20:12 zzz3",
    "size": 8192,
  },
]
`;

exports[`z/OS node accessor Parser can list symbolic link file of USS 1`] = `
[
  {
    "fieldNames": [
      "permissions",
      "links",
      "owner",
      "group",
      "size",
    ],
    "fileType": 2,
    "group": "DEFLT1",
    "lastModified": 1970-01-01T00:00:00.000Z,
    "linkTo": "/",
    "name": "zzz2",
    "owner": "LIANGQI",
    "permissions": "lrwxrwxrwx",
    "rawString": "lrwxrwxrwx   1 LIANGQI  DEFLT1         1 Nov  7 20:35 zzz2 -> /",
    "size": 1,
  },
]
`;
